Site mobile version edited

--- a/templates/site/index.html.twig
+++ b/templates/site/index.html.twig
@@ -15,86 +15,19 @@
 {% block javascripts %}
     <script src="{{ asset('js/jquery.min.js') }}"></script>
     <script src="{{ asset('js/jquery-ui.min.js') }}"></script>
+    <script src="{{ asset('js/md-site.js') }}"></script>
 
     <script type="text/javascript">
-
-        var contentContainer;
-        var loadingIndicator;
 
         var mobileVersionTitle;
         var logo;
 
         $(document).ready(function () {
-            contentContainer = $('#content');
-            loadingIndicator = $('#circleG');
-
             mobileVersionTitle = $('#mobile-version-title');
             logo = $('#logo');
 
             setSelected('{{ content }}');
-
-            $('.menu-item-dropdown').on('click', function () {
-                var dropdownMenu = $(this).find('.dropdown-menu');
-
-                if (dropdownMenu.is(":visible")) {
-                    dropdownMenu.slideUp(100);
-                } else {
-                    var topOffset;
-
-                    if ($(document).width() > 750) {
-                        topOffset = 25;
-                    } else {
-                        topOffset = 68;
-                    }
-
-                    dropdownMenu.slideDown(100);
-                    dropdownMenu.css('left', (this.offsetLeft - 7) + 'px');
-                    dropdownMenu.css('top', this.offsetTop + topOffset + 'px');
-                }
-            });
         });
-
-        function loadContent(url, title, addToHistory) {
-            if (url != undefined && contentContainer != undefined) {
-
-                loadingIndicator.show();
-                contentContainer.hide();
-
-                $.ajax({
-                    url: url,
-                    type: "GET"
-                }).done(function (data) {
-                    document.title = title;
-
-                    loadingIndicator.hide();
-
-                    contentContainer.fadeTo(200, 1);
-                    contentContainer.html(data);
-
-                    if (addToHistory) {
-                        window.history.pushState({"html": data, "pageTitle": title}, title, url);
-                    }
-                });
-            }
-        }
-
-        function showDialog(title, message) {
-            var dialogMessage = $("<div/>");
-            var messageContainer = $('<p/>', {
-                html: message
-            });
-            dialogMessage.append(messageContainer);
-
-            dialogMessage.dialog({
-                title: title,
-                modal: true,
-                buttons: {
-                    "Закрыть": function () {
-                        $(this).dialog("close");
-                    }
-                }
-            });
-        }
 
         var isMenuOpened = false;
         function changeMenuState() {
@@ -130,11 +63,6 @@
                 changeImageToTitle();
             }
         });
-
-        function setSelected(selected) {
-            $('.selected').removeClass('selected');
-            $('#' + selected).addClass('selected', 100);
-        }
 
         //site pages loading functions
         function loadMainPage() {
