--- a/templates/site/about.html.twig
+++ b/templates/site/about.html.twig
@@ -1,36 +1,53 @@
 <div class="content">
+
     <h1>О АВТОШКОЛЕ ООО "ПИЛОТ-М"</h1>
-    <h2>Приветствие директора</h2>
-    <p>Спасибо, что зашли к нам на страничку! Мы будем рады встретиться  с Вами! Готовы воплотить в реальность Вашу мечту стать водителем! Коллектив профессионалов  с десятилетним опытом ждет Вас, готов делиться своими знания и умениями. Занятия будут познавательными, никакой скуки и тупого заучивания!
-        Нами организованы замечательные аудитории для обучения, собрана библиотека , создан компьютерный класс, обновляется база учебных фильмов , подборка с телепередач, вопросы экзаменационных билетов.
-        Доброжелательные вежливые инструкторы строго следят за надлежащим  состоянием учебных автомобилей. Практические занятия проходят  на современном   автодроме.
+
+    <h2 style="margin-top: 20px">Приветствие директора</h2>
+    <div class="text">Спасибо, что зашли к нам на страничку! Мы будем рады встретиться с Вами! Готовы воплотить в
+        реальность Вашу мечту стать водителем! Коллектив профессионалов с десятилетним опытом ждет Вас, готов делиться
+        своими знания и умениями. Занятия будут познавательными, никакой скуки и тупого заучивания!
+        Нами организованы замечательные аудитории для обучения, собрана библиотека , создан компьютерный класс,
+        обновляется база учебных фильмов , подборка с телепередач, вопросы экзаменационных билетов.
+        Доброжелательные вежливые инструкторы строго следят за надлежащим состоянием учебных автомобилей. Практические
+        занятия проходят на современном автодроме.
         Администраторы помогут Вам подготовить документы необходимые для обучения и сдачи экзамена в ГИБДД.
         Мы уверенно вместе с Вами будем двигаться к намеченной цели, оправдаем Ваше доверие.
         Через четыре месяца Вы грамотный водитель.
-    </p>
+    </div>
+    <div class="text">Искренне ваш,
+        И.Г.Губайдуллин
+        ​директор школы
+    </div>
 
-    <p>Искренне ваш,
-    И.Г.Губайдуллин
-    ​директор школы</p>
-    <h2>Наша история</h2>
-    <p> Нашей автошколе в  феврале 2018 года исполнилось  10 лет.
+    <h2 style="margin-top: 70px">Наша история</h2>
+    <div class="text"> Нашей автошколе в феврале 2018 года исполнилось 10 лет.
 
-        За время добросовестной работы профессиональный коллектив подготовил не одну тысячу водителей транспортных средств.Вместе с нашими обучающимися мы воплотили их мечту в реальность.
+        <img src="/images/photo1.jpg" style="float:right; margin: 10px; width: 150px; height: 200px"/>
+        <img src="/images/photo2.jpg" style="float:right; margin: 10px; width: 150px; height: 200px"/>
 
-        Получив водительское удостоверение , они обрели возможность влиться  в транспортный поток!
+        За время добросовестной работы профессиональный коллектив подготовил не одну тысячу водителей транспортных
+        средств.Вместе с нашими обучающимися мы воплотили их мечту в реальность.
+
+        Получив водительское удостоверение , они обрели возможность влиться в транспортный поток!
 
         Чувствуют себя там уверенно и спокойно, применяют на практике полученные знания и навыки!
-    </p>
-    <h2>IMG x2</h2>
-    <h2>Наши принципы</h2>
-    <p> С огромной любовью и уважением относится к каждому обучающемуся нашей автошколы.
+    </div>
+
+    <div class="clearfix"></div>
+
+    <h2 style="margin-top: 70px">Наши принципы</h2>
+    <div class="text"> С огромной любовью и уважением относится к каждому обучающемуся нашей автошколы.
 
         С желанием и терпение передавать знания и навыки.
 
         Всегда с пониманием подходить к создавшейся ситуации и находить самый благоприятный выход.
-    </p>
-    <p>
+    </div>
+    <div class="text">
         Создать комфортную обстановку для освоения нового дела.
 
-        Вырастить из мечтателя иметь в/у настоящего профессионала знающего и соблюдающего ПДД.</p>
+        Вырастить из мечтателя иметь в/у настоящего профессионала знающего и соблюдающего ПДД.</div>
+
+    <div class="clearfix"></div>
+
+    <div style="margin: 130px;" class="clearfix"></div>
 </div>
