--- a/templates/site/index.html.twig
+++ b/templates/site/index.html.twig
@@ -16,6 +16,8 @@
     <script src="{{ asset('js/jquery.min.js') }}"></script>
     <script src="{{ asset('js/jquery-ui.min.js') }}"></script>
     <script src="{{ asset('js/md-site.js') }}"></script>
+    <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
+    <script src="{{ asset('js/map.js') }}"></script>
 
     <script type="text/javascript">
 
