--- a/templates/site/main.html.twig
+++ b/templates/site/main.html.twig
@@ -102,6 +102,8 @@
 
     <div class="clearfix"></div>
 
-    <div style="margin: 124px;" class="clearfix"></div>
+    <div id="map"></div>
+
+    <div style="margin: 50px;" class="clearfix"></div>
 
 </div>
