--- a/public/css/site/style.css
+++ b/public/css/site/style.css
@@ -219,7 +219,7 @@ a {
 
     width: 100%;
 
-    background: linear-gradient(90.73deg, #4A6491 0.07%, #6A7FA3 99.92%);
+    background: linear-gradient(90.73deg, #4A6491 0.07%, #3887bf 99.92%);
     background-size: 100%;
 }
 
@@ -311,5 +311,6 @@ a {
 
 #map {
     width: 100%; height: 400px; padding: 0; margin: 40px 0 0 0;
-    background: #D0E4F2;
+    background: url("../../images/MapImage.png") no-repeat;
+    background-size: 100%;
 }
