--- a/templates/site/index.html.twig
+++ b/templates/site/index.html.twig
@@ -115,7 +115,7 @@
 
 {% block body %}
 
-    <div class="content" style="margin-bottom: 20px">
+    <div class="content">
         <div class="clearfix">
             <div class="logo-space"></div>
             <div class="header">
@@ -144,22 +144,22 @@
         </div>
     </div>
 
-    <div class="blue-line">
-        <div class="content clearfix">
+    <div class="content clearfix mozaik-background">
+        <div class="main-info-line">
             <table style="width: 100%">
                 <tr>
                     <td>
-                        <h1 class="blue-line-title">Автошкола ООО “Пилот-М”</h1></td>
+                        <h1 class="main-info-line-title">Автошкола ООО “Пилот-М”</h1></td>
                     <td>
-                        <div class="blue-line-right-info">ул.Бутлерова дом 30</div>
+                        <div class="main-info-line-right-info">ул.Бутлерова дом 30</div>
                     </td>
                 </tr>
                 <tr>
                     <td>
-                        <div class="blue-line-subtitle">в центре города станция метро пл. Тукая</div>
+                        <div class="main-info-line-subtitle">в центре города станция метро пл. Тукая</div>
                     </td>
                     <td>
-                        <div class="blue-line-right-info">ул.Профсоюзная дом 40-42</div>
+                        <div class="main-info-line-right-info">ул.Профсоюзная дом 40-42</div>
                     </td>
                 <tr>
             </table>
@@ -204,6 +204,10 @@
             {% include 'site/info.html.twig' %}
 
         {% endif %}
+
+    </div>
+
+    <div class="signs-line">
 
     </div>
 
