--- a/templates/site/resources_for_students.html.twig
+++ b/templates/site/resources_for_students.html.twig
@@ -3,7 +3,8 @@
 
     <h2>ПДД онлайн</h2>
     <div class="links">
-        <a href="http://www.pdd24.com/" target="_blank">1) http://www.pdd24.com/</a>
+        <a href="http://www.pdd24.com/" target="_blank">ПДД онлайн</a>
+        <a href="https://www.gosuslugi.ru/category" target="_blank">Сайт госуслуги</a>
     </div>
 
 
