--- a/templates/site/index.html.twig
+++ b/templates/site/index.html.twig
@@ -144,7 +144,7 @@
         </div>
     </div>
 
-    <div class="content clearfix mozaik-background">
+    <div class="content clearfix">
         <div class="main-info-line">
             <table style="width: 100%">
                 <tr>
