--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -140,7 +140,7 @@
             </div>
 
             <div style="height: 220px; position: relative; top: 60px; z-index: -1; opacity: 100">
-                <img class="center" style="width: 230px;" src="{{ asset('images/Logo.png') }}"/>
+                <img class="center" style="width: 230px;" src="{{ asset('images/Logo15.png') }}"/>
             </div>
 
         </div>
