--- a/templates/site/index.html.twig
+++ b/templates/site/index.html.twig
@@ -124,7 +124,7 @@
                 </div>
                 <div id="logo" class="logo"></div>
                 <div id="mobile-version-title" class="title center"
-                     style="margin-top: -5px !important; height: 65px; display: none; pointer-events: none;">Главная
+                     style="margin-top: -5px !important; height: 65px; display: none; pointer-events: none;">Автошкола
                 </div>
             </div>
 
@@ -207,8 +207,12 @@
 
     </div>
 
-    <div class="signs-line">
+    {#<div class="signs-line">#}
 
-    </div>
+    {#</div>#}
+
+    {#<div class="content footer">#}
+        {#<div></div>#}
+    {#</div>#}
 
 {% endblock %}
